--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 showlist: true,
                 links: [
                 {name:"PubKey",url:"./pub.html"},
-                {name:"张若岩的个人网站",url:"http://www.swzry.com/"},
+                {name:"张若岩的个人网站",url:"http://www.swzry.cn/"},
                 {name:"Markdown Editor",url:"./markdown.html"},
                 {name:"PayMe",url:"./pay.html"},
                 ],
