--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>BUPTCZQ[PG]</title>
+  <title>Pigeon Sauces</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, user-scalable=no">
   <meta name="renderer" content="webkit">
   <meta name="theme-color" content="#ffffff">
@@ -87,7 +87,7 @@
     <div align="center">
     <el-row>
         <el-col :span="24">
-        <a class="hometitle" href="#/"><h1>BUPTCZQ[PG]</h1></a>
+        <a class="hometitle" href="#/"><h1>Pigeon Sauces</h1></a>
         </el-col>
     </el-row>
     <em>Stay hungry. Stay foolish.</em>
@@ -124,7 +124,7 @@
         <!-- footer -->
         <footer>
         <div align="center">
-            Copyright © {{ thisYear }} <a href="http://www.czq233.com">BUPTCZQ</a>
+            Copyright © {{ thisYear }} <a href="http://www.czq233.com">Pigeon Sauces</a>
              | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
             <br />
             Powered by <a href="https://www.vuejs.org">Vue.js</a>
@@ -267,7 +267,7 @@
                 showlist: true,
                 links: [
                 {name:"PubKey",url:"./pub.html"},
-                {name:"张若岩的个人网站",url:"http://www.swzry.cn/"},
+                {name:"地灵殿间歇泉",url:"http://www.swzry.cn/"},
                 {name:"Markdown Editor",url:"./markdown.html"},
                 {name:"PayMe",url:"./pay.html"},
                 ],
