--- a/markdown.html
+++ b/markdown.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>BUPTCZQ's Markdown Editor</title>
+  <title>Markdown Editor</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, user-scalable=no">
   <meta name="renderer" content="webkit">
   <meta name="theme-color" content="#ffffff">
@@ -103,7 +103,7 @@
         <br />
         <div class="footer">
         <div align="center">
-            Copyright © {{ thisYear }} <a href="http://www.czq233.com">BUPTCZQ</a>
+            Copyright © {{ thisYear }} <a href="http://www.czq233.com">Pigeon Sauces</a>
              | <script src="https://s22.cnzz.com/z_stat.php?id=1261965247&web_id=1261965247" language="JavaScript"></script>
             <br />
             Powered by <a href="https://www.vuejs.org">Vue.js</a>
