--- a/pay.html
+++ b/pay.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>Pay to BUPTCZQ</title>
+  <title>Pay to Pigeon Sauces</title>
   <style type="text/css">
     body{
         font-family:PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif;
